Interccion con la bd

--- a/InfoWeb/src/main/resources/application.properties
+++ b/InfoWeb/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=InfoWeb
 
 spring.datasource.url=jdbc:oracle:thin:@//localhost/XEPDB1
-spring.datasource.username=InfoWeb
+spring.datasource.username=INFOWEB
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
  
